--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,7 +44,7 @@ services:
     container_name: promtail
     volumes:
       - ./promtail-config.yml:/etc/promtail/config.yml
-      - ../01-backend/logs:/var/log
+      - /data/coolify/applications/pc4so84kccogko4gog04ggco/logs:/var/log
     command: -config.file=/etc/promtail/config.yml
     depends_on:
       - loki_dev
